--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url= jdbc:mysql://localhost:3306/rbi?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/rbi001?useSSL=false
 spring.datasource.username= root
 spring.datasource.password= root
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
