--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -161,21 +161,21 @@ jobs:
         openshift_token: ${{ env.OPENSHIFT_TOKEN }}
         insecure_skip_tls_verify: true
         namespace: ${{ env.OPENSHIFT_NAMESPACE }}
-
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+       username: ${{ secrets.DOCKER_USERNAME }}
+       password: ${{ secrets.DOCKER_PASSWORD }}
     # This step should create a deployment, service, and route to run your app and expose it to the internet.
     # https://github.com/redhat-actions/oc-new-app#readme
     - name: Create and expose app
       id: deploy-and-expose
       uses: redhat-actions/oc-new-app@v1
       with:
-        uses: docker/login-action@v1
-        with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-       app_name: ${{ env.APP_NAME }}
-       image: ${{ steps.push-image.outputs.registry-path }}
-       namespace: ${{ env.OPENSHIFT_NAMESPACE }}
-       port: ${{ env.APP_PORT }}
+        app_name: ${{ env.APP_NAME }}
+        image: ${{ steps.push-image.outputs.registry-path }}
+        namespace: ${{ env.OPENSHIFT_NAMESPACE }}
+        port: ${{ env.APP_PORT }}
 
     - name: Print application URL
       env:
