--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -45,8 +45,8 @@ env:
 
   # 🖊️ EDIT to change the image registry settings.
   # Registries such as GHCR, Quay.io, and Docker Hub are supported.
-  IMAGE_REGISTRY: docker.io/jaygokul
-  IMAGE_REGISTRY_USER: jaygokul
+  IMAGE_REGISTRY: docker.io/smtp2jay
+  IMAGE_REGISTRY_USER: smtp2jay
   IMAGE_REGISTRY_PASSWORD: ${{ secrets.IMAGE_REGISTRY_PASSWORD }}
 
   # 🖊️ EDIT to specify custom tags for the container image, or default tags will be generated below.
