--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -45,8 +45,8 @@ env:
 
   # 🖊️ EDIT to change the image registry settings.
   # Registries such as GHCR, Quay.io, and Docker Hub are supported.
-  IMAGE_REGISTRY: docker.io/jaygokul
-  IMAGE_REGISTRY_USER: jaygokul
+  IMAGE_REGISTRY: quay.io/jayakrishna_gokul
+  IMAGE_REGISTRY_USER: jayakrishna_gokul
   IMAGE_REGISTRY_PASSWORD: ${{ secrets.IMAGE_REGISTRY_PASSWORD }}
 
   # 🖊️ EDIT to specify custom tags for the container image, or default tags will be generated below.
@@ -161,11 +161,6 @@ jobs:
         openshift_token: ${{ env.OPENSHIFT_TOKEN }}
         insecure_skip_tls_verify: true
         namespace: ${{ env.OPENSHIFT_NAMESPACE }}
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-       username: ${{ secrets.DOCKER_USERNAME }}
-       password: ${{ secrets.DOCKER_PASSWORD }}
     # This step should create a deployment, service, and route to run your app and expose it to the internet.
     # https://github.com/redhat-actions/oc-new-app#readme
     - name: Create and expose app
