--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   mysql:
-    image: jaygokul/mysql:8
+    image: mysql:8
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_USER=user
@@ -10,7 +10,7 @@ services:
     ports:
       - "3306:3306" #localshost on left, host port on right
   rbi01:
-    image: jaygokul/rbi01
+    image: rbi01
     ports:
       - "8080:8080"
     environment:
